# MP-Final

./: .gitignore  Botao.h  CMakeLists.txt  GeraRecursos.h  Head.h  Integrantes  Jogo.cpp  Jogo.h  Makefile  Objeto.cpp  Objeto.h  Readme.md  instrucao.txt
Relatorios/: RELATORIO-Ariel.txt  RELATORIO-Guilherme  RELATORIO-JoaoPedro.txt  RELATORIO-Pedro.txt  RELATORIO-Waliff
imagens/: Mapa_template.xcf
include/: Botao.h  Fabrica.h  GeraRecursos.h  Head.h  Jogo.h  Menu.h  Objeto.h  Player.h  Predio.h  Unidade.h
saves/: altercoes .txt  formato.txt  save.txt
source/: Botao.cpp  Fabrica.cpp  GeraRecursos.cpp  Jogo.cpp  Makefile  Objeto.cpp  Player.cpp  Predio.cpp  Unidade.cpp  main.cpp  test  teste.cpp
source/teste/: testeBotao.cpp  testeFabrica.cpp  testeGeraRecursos.cpp  testeJogo.cpp  testeObjeto.cpp  testePlayer.cpp  testePredio.cpp  testeUnidade.cpp
